Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

  - Add output_encoding attribute to specify the desired encoding
    to apply to the output handle.
  - Add match_encoding attribute to the input pod encoding
    when writing to the output handle.
  - Make accessors read/write (instead of read-only)
    for consistency with Pod::Simple classes.

  [Backward Compatibility Change]
  - Passing unknown arguments to the constructor now produces a warning
    and in the future will throw an error.

2.002     2014-07-05T15:20:40Z

  - Docs: Add example of command line usage to Synopsis.
    Thanks, Cindy Wang!

2.001     2014-04-20T02:40:11Z

  - Use double-asterisk instead of double-underscore for bold Markdown.
    This allows bold and italic to be nested without confusing parsers.
    Thanks to Mike Covington for the great pull request (gh-9)!

2.000     2014-02-01T14:38:27Z

  - Releasing previous (1.99[01]) as stable
    (now uses Pod::Simple instead of Pod::Parser).
    See below for changes.

1.991-TRIAL 2014-01-03T04:07:49Z

  [Test Fixes]
  - Ignore worthless testing of empty links that fail with Pod::Simple 3.16.

1.990-TRIAL 2014-01-02T14:13:40Z

  [Enhancements]
  - Change backend from Pod::Parser to Pod::Simple.
    Previous documented API has been ported
    however the Pod::Simple API should be preferred for new code.
  - Improve escaping of markdown characters.
  - Accept for/begin 'markdown' and 'html' regions by default.
  - Represent over/back regions without items as blockquotes.

  [Backward Incompatible Changes]
  - E<> codes used to produce equivalent html entities (&foo;).
    These now simply insert the corresponding unicode character.
    If you desire alternate behavior please report a bug.
  - Tabs are now expanded.

1.500     2013-11-22T15:05:31Z

    - Format url fragments (in links to perldoc sections)
      according to the destination site (perldoc_url_prefix).