@@ -8,6 +8,8 @@ Revision history for Perl extension {{$dist->name}}
     when writing to the output handle.
   - Make accessors read/write (instead of read-only)
     for consistency with Pod::Simple classes.
+  - Remove documentation for deprecated API
+    (parse_from_file(), parse_from_filehandle(), and as_markdown()).
 
   [Backward Compatibility Change]
   - Passing unknown arguments to the constructor now produces a warning
